@@ -9,9 +9,12 @@
 
     public interface ITransactionalReference : IReference
     {
+        bool HasSnapshots { get; }
         void SetValue(object value, Transaction transaction);
         object GetValue(Transaction transaction);
         void Complete(Transaction transaction, long timestamp);
         void Dispose(Transaction transaction);
+        void ClearSnapshots();
+        void ClearSnapshots(long timestamp);
     }
 }
